feat: article polishment

--- a/src/assets/articles/math-behind-uniswap/page.mdx
+++ b/src/assets/articles/math-behind-uniswap/page.mdx
@@ -9,11 +9,10 @@ import Formula5 from "./formula-5.png"
 import Formula6 from "./formula-6.png"
 
 export const article = {
-  author: 'Adam Wathan',
-  date: '2023-12-17',
+  author: 'Jarek Lin',
+  date: '2022-01-15',
   title: 'Math behind Uniswap',
-  description:
-    'Most companies try to stay ahead of the curve when it comes to visual design, but for Planetaria we needed to create a brand that would still inspire us 100 years from now when humanity has spread across our entire solar system.',
+  description: "Uniswap's design and decentralized spirit are what made me dive into blockchain. Due to my economic background, I was obsessed with DeFi's primitive protocol design since then"
 }
 
 export default (props) => <ArticleLayout article={article} {...props} />
