--- a/src/assets/articles/reopened-financial-crisis/page.mdx
+++ b/src/assets/articles/reopened-financial-crisis/page.mdx
@@ -6,8 +6,7 @@ export const article = {
   author: 'Jarek Lin',
   date: '2022-09-05',
   title: 'Reopened "Asia Financial Crisis" in Crypto - Luna and UST event',
-  description:
-    'Most companies try to stay ahead of the curve when it comes to visual design, but for Planetaria we needed to create a brand that would still inspire us 100 years from now when humanity has spread across our entire solar system.',
+  description: 'Some of my viewpoints on the Luna bubble burst crisis and how it reminds me of the Asian Financial Crisis'
 }
 
 export default (props) => <ArticleLayout article={article} {...props} />
