--- a/src/assets/articles/matrix-unleashed/page.mdx
+++ b/src/assets/articles/matrix-unleashed/page.mdx
@@ -7,7 +7,7 @@ export const article = {
   date: '2023-12-17',
   title: 'Matrix Unleashed: Building an Oracle-Free DeFi at Taipei Blockchain Week',
   description:
-    'Most companies try to stay ahead of the curve when it comes to visual design, but for Planetaria we needed to create a brand that would still inspire us 100 years from now when humanity has spread across our entire solar system.',
+    "In early December, I had the opportunity to participate in Taiwan's largest blockchain campaign, during the hackathon, i created an oracle-free defi lending protocol..."
 }
 
 export default (props) => <ArticleLayout article={article} {...props} />
